--- a/.env.example
+++ b/.env.example
@@ -32,8 +32,8 @@
 # # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# DATABASE_URL="mysql://root:England1010!!!@localhost:3306/plura"
+# DATABASE_URL=
 # PROD_DATABASE_URL=
-# LOCAL_DATABASE_URL="mysql://root:England1010!!!@localhost:3306/plura"
+# LOCAL_DATABASE_URL=
 # # https://www.builder.io/c/docs/using-your-api-key
 # NEXT_PUBLIC_BUILDER_API_KEY=
